# bind_api

./: .gitignore  Dockerfile  README.md  README.rst  pyproject.toml
bind_api/: rest_api.py
bind_api/routes/: arcadia_route.py  lexicon_route.py
bind_api/routes/dependencies/: air_session.py  arcadia_session.py  dependencies.py  lexicon_session.py  utils.py  web_socket_manager.py
bind_api/routes/models/: arcadia_models.py
dash_api/: client_network.py  dash_api.py
log/: readMe.txt
roboto_api/: roboto_api.py
roboto_api/routes/: air_route.py  arcadia_route.py  lexicon_route.py  root_route.py  wh00t_chat_route.py
roboto_api/routes/dependencies/: arcadia_session.py  dependencies.py  lexicon_session.py  session.py  web_socket_manager.py
roboto_api/routes/models/: arcadia_models.py
tests/: test_dash_api.py  test_rest_api.py  test_roboto_api.py
