[tool.poetry]
name = 'roboto_api'
version = '0.1.0'
description = 'REST API that provides data to front-end about various information services'
authors = ['roboto84 <7658704+roboto84@users.noreply.github.com>']

[tool.poetry.dependencies]
python = '^3.10'
fastapi = '^0.65.2'
fastapi-utils = '^0.2.1'
python-dotenv = '^0.15.0'
lexicon = {git = 'https://github.com/roboto84/lexicon.git', rev = '05212b1'}
air-core = {git = 'https://github.com/roboto84/air_core.git', rev = '55beff2'}
wh00t-core = {git = 'https://github.com/roboto84/wh00t_core.git', tag = 'v0.4.3'}
willow-core = {git = 'https://github.com/roboto84/willow_core.git', rev = '59d8f44'}
uvicorn = {extras = ["standard"], version = "^0.16.0"}

[tool.poetry.dev-dependencies]
pytest = '^6.2.5'

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'
