[tool.poetry]
name = 'bind_api'
version = '0.1.0'
description = 'REST API that provides data to front-end about various information services'
authors = ['roboto84 <7658704+roboto84@users.noreply.github.com>']

[tool.poetry.dependencies]
python = '~3.10'
fastapi = '^0.95.1'
fastapi-utils = '^0.2.1'
python-dotenv = '^1.0.0'
lexicon = {git = 'https://github.com/roboto84/lexicon.git', tag = 'v0.5.2'}
arcadia = {git = 'https://github.com/roboto84/arcadia.git', tag = 'v0.2.5'}
air-core = {git = 'https://github.com/roboto84/air_core.git', tag = 'v0.1.0'}
wh00t-core = {git = 'https://github.com/roboto84/wh00t_core.git', tag = 'v0.5.2'}
willow-core = {git = 'https://github.com/roboto84/willow_core.git', tag = 'v0.1.1'}
uvicorn = {extras = ["standard"], version = "^0.22.0"}

[tool.poetry.dev-dependencies]
pytest = '^7.2.0'

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'
